[package]
name = "contract"
version = "0.10.0"
authors = ["Eugene The Dream <ek@proximity.dev>", "MagicGordon <gordon@ref.finance>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
near-sys = "0.2.0"
uint = { version = "0.9.5", default-features = false }
common = { path = "../common/" }
once_cell = "1.18.0"

[dev-dependencies]
workspaces = "0.7.0"
tokio = { version = "1.33.0", features = ["full"] }
near-units = "0.2.0"
rand = "0.8"
approx = "0.5"

test-oracle = { path = "../test-oracle" }
mock-ft = { path = "../mock-ft" }
mock-ref-exchange = { path = "../mock-ref-exchange" }
mock-boost-farming = { path = "../mock-boost-farming" }