[package]
name = "contract"
version = "0.15.7"
authors = ["Eugene The Dream <ek@proximity.dev>", "MagicGordon <gordon@ref.finance>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
near-sys = "0.2.0"
uint = { version = "0.9.5", default-features = false }
common = { path = "../common/" }
once_cell = "1.18.0"
hex = "0.4.3"

[dev-dependencies]
near-workspaces = "0.14"
tokio = { version = "1.33.0", features = ["full"] }
near-units = "0.2.0"
rand = "0.8"
approx = "0.5"

test-oracle = { path = "../test-oracle" }
mock-ft = { path = "../mock-ft" }
mock-ref-exchange = { path = "../mock-ref-exchange" }
mock-boost-farming = { path = "../mock-boost-farming" }
mock-pyth = { path = "../mock-pyth" }
mock-rated-token = { path = "../mock-rated-token" }
mock-dcl = { path = "../mock-dcl" }

[features]
test = []