[package]
name = "mock-dcl"
version = "2.3.3"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "=0.9.5", default-features = false }
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
near-sys = "=0.2"
num-bigint = "0.4.3"
once_cell = "1.18.0"
